--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,74 @@ body {
     margin: 0;
 }
 
-.avisos {
-    padding-bottom: 60px;
-}
 
-.avisos h2 {
+
+h2 {
     color: #b1d182;
     font-size: 40px;
 }
 
+button {
+    background-color: #688f4e;
+    border: none;
+}
+
+@media (max-width: 426px) {
+.main {
+    margin-top: 60px;
+}
+}
+
+
+
+.avisos, .login, .register, .lista_alumnos, .subir_tareas, .mi-tarea {
+    padding-bottom: 80px;
+}
+
+.menu-materias {
+    padding-bottom: 80px;
+}
+
+.menu-materias img {
+    width:200px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+label {
+    color: #b1d182;
+}
+
+small {
+    color: #f4f1e9;
+}
+
+.login .container {
+    max-width: 400px;
+}
+
+.form-signin {
+    width: 100%;
+    padding: 15px;
+    margin: auto;
+}
+
+.register .container {
+    max-width: 400px;
+}
+
+.lista_alumnos .lista2 {
+    max-width: 800px;
+}
+
+.lista_alumnos .lista2 .col {
+    border: 1px solid #688f4e;
+}
+
+.subir_tareas .container {
+    max-width: 400px;
+}
+
+.mi-tarea .container {
+    max-width: 400px;
+}
