--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='templates.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='output.css') }}">
     <title>Clover</title>
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='favicon.png')}}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -18,41 +18,39 @@
             <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
             Clover</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="register.html">Registrarse <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Maestro
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="lista_alumnos.html">Lista de Alumnos</a>
-                  <a class="dropdown-item" href="subir_tareas.html">Subir tareas</a>
-                </div>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="/login">Entrar</a>
                 </li>
-            <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Alumno
+                    Maestro
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="alumno_materias.html">Materias</a>
-                      <a class="dropdown-item" href="mi_tarea.html">Ver mi tarea</a>
+                    <a class="dropdown-item" href="/registro">Registro de Alumnos</a>
+                    <a class="dropdown-item" href="/get">Lista de Alumnos</a>
+                    <a class="dropdown-item" href="/uptareas">Subir tareas</a>
                     </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Instrucciones</a>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            Escuela Primaria Valentín Gómez Farías
-          </span>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Alumno
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/amaterias">Materias</a>
+                        <a class="dropdown-item" href="/sendtarea">Ver mi tarea</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/tutorial">Instrucciones</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                Escuela Primaria Valentín Gómez Farías
+            </span>
         </div>
     </nav>
 
@@ -73,60 +71,64 @@
                     <div class="card h-100">
                         <img src="https://imgur.com/gYFlrRU.png" class="card-img-top" alt="Imagen del aviso 1">
                         <div class="card-body">
-                        <h5 class="card-title">15 de mayo: Asueto</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">15 de mayo: Asueto</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                 </div>
+
                 <div class="col mb-4">
                     <div class="card h-100">
                         <img src="https://imgur.com/BMNeAHd.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Plataforma de Iglés</h5>
-                        <p class="card-text">A partir del 00/00 la materia de inglés tendrá habilitada la plataforma Fulanita.<br>Informes...</p>
+                            <h5 class="card-title">Plataforma de Inglés</h5>
+                            <p class="card-text">A partir del 00/00 la materia de inglés tendrá habilitada la plataforma Fulanita.<br>Informes...</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                 </div>
+
                 <div class="col mb-4">
                     <div class="card h-100">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                 </div>
+
                 <div class="col mb-4">
                     <div class="card h-100">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
                     </div>
                 </div>
+
                 <div class="col mb-4">
                     <div class="card text-white bg-info mb-3 h-100">
                         <div class="card-header">Exámenes</div>
                         <div class="card-body">
-                          <h5 class="card-title">Del 5 al 10 de junio</h5>
-                          <p class="card-text">Español: Lunes 5 de junio.<br>Matemáticas: Martes 6 de junio.<br>Ciencias: Miércoles 7 de junio.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                          </div>
+                            <h5 class="card-title">Del 5 al 10 de junio</h5>
+                            <p class="card-text">Español: Lunes 5 de junio.<br>Matemáticas: Martes 6 de junio.<br>Ciencias: Miércoles 7 de junio.</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Last updated 3 mins ago</small>
+                            </div>
                     </div>
                 </div>
                 <div class="col mb-4">
