--- a/templates/mi_tarea.html
+++ b/templates/mi_tarea.html
@@ -7,52 +7,50 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="output.css">
-    <title>Materias</title>
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <<link rel="stylesheet" href="{{ url_for('static',filename='templates.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='output.css') }}">
+    <title>Mi Tarea</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='favicon.png')}}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/home">
             <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
             Clover</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="register.html">Registrarse</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar</a>
-            </li>
-            <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Maestro <span class="sr-only">(current)</span>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="lista_alumnos.html">Lista de Alumnos</a>
-                  <a class="dropdown-item" href="#">Subir tareas</a>
-                </div>
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="/login">Entrar</a>
                 </li>
-            <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Alumno
+                    Maestro
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="alumno_materias.html">Materias</a>
-                      <a class="dropdown-item" href="mi_tarea.html">Ver mi tarea</a>
+                        <a class="dropdown-item" href="/registro">Registro de Alumnos</a>
+                        <a class="dropdown-item" href="/get">Lista de Alumnos</a>
+                        <a class="dropdown-item" href="/uptareas">Subir tareas</a>
                     </div>
+                </li>
+            <li class="nav-item dropdown active">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Alumno<span class="sr-only">(current)</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/amaterias">Materias</a>
+                <a class="dropdown-item" href="#">Enviar mi tarea</a>
+                </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Instrucciones</a>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            Escuela Primaria Valentín Gómez Farías
-          </span>
+                <a class="nav-link" href="/tutorial">Instrucciones</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                Escuela Primaria Valentín Gómez Farías
+            </span>
         </div>
     </nav>
 
@@ -65,33 +63,34 @@
         </div>
     </main>
 
-    <section class="subir_tareas section">
+    <section class="mi-tarea section">
         <div class="container" style="width: 500px;">
-            <h2 class="text-center my-5">Nueva Tarea</h2>
-            <h3>Sube aquí el documento de la tarea que deberán consultar tus alumnos.</h3>
+            <h2 class="text-center my-5">Tareas</h2>
+            <h3>Aquí encontrarás en qué consiste la tarea y el apartado para subir tus evidencias.</h3>
             <form>
                 <div class="form-group">
-                    <label for="validationCustom04">¿A cuál materia pertenece?</label>
-                    <select class="custom-select" id="validationCustom04" required>
-                        <option selected disabled value="">Elige...</option>
-                        <option value="1">Español</option>
-                        <option value="2">Matemáticas</option>
-                        <option value="3">Formación Cívica y Ética</option>
-                        <option value="4">Jalisco</option>
-                        <option value="5">Ciencias Naturales</option>
-                    </select>
-                    <div class="invalid-feedback">
-                        Please select a valid state.
+                    <div class="card">
+                        <div class="card-body">
+                            Comentarios adicionales de parte del maestro.
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">Descarga el pdf</label>
+                    </div>
+                    <div class="class form-group">
+                        <a href="#" class="btn btn-primary" onclick="">Descargar archivo</a>
                     </div>
                 </div>
+
                 <div class="form-group">
-                    <label for="exampleFormControlFile1">Selecciona el archivo</label>
+                    <label for="exampleFormControlFile1">Sube tu tarea</label>
                     <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Comentarios extra para el alumno</label>
+                    <label for="exampleFormControlTextarea1">Comentarios para el maestro</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <p>Aquí debe cargar la visualización del archivo.</p>
                 <button type="submit">Enviar</button>
             </form>
         </div>
@@ -106,5 +105,6 @@
     <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
 </body>
 </html>
