--- a/templates/up_tarea.html
+++ b/templates/up_tarea.html
@@ -7,52 +7,50 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="output.css">
-    <title>Mi tarea</title>
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="stylesheet" href="{{ url_for('static',filename='templates.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='output.css') }}">
+    <title>Subir nueva tarea</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static',filename='favicon.png')}}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/home">
             <img src="https://imgur.com/fNKba6L.png" width="30" height="30" alt="Clover Logo">
             Clover</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="register.html">Registrarse</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="login.html">Entrar</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Maestro
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="lista_alumnos.html">Lista de Alumnos</a>
-                  <a class="dropdown-item" href="subir_tareas.html">Subir tareas</a>
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="/login">Entrar</a>
+                </li>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Maestro
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/registro">Registro de Alumnos</a>
+                        <a class="dropdown-item" href="/get">Lista de Alumnos</a>
+                        <a class="dropdown-item" href="/uptareas">Subir tareas</a>
                 </div>
             </li>
-            <li class="nav-item dropdown active">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Alumno
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="alumno_materias.html">Materias</a>
-                <a class="dropdown-item" href="#">Ver mi tarea</a>
+                <a class="dropdown-item" href="/amaterias">Materias</a>
+                <a class="dropdown-item" href="/sendtarea">Ver mi tarea</a>
                 </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Instrucciones</a>
-            </li>
-          </ul>
-          <span class="navbar-text">
-            Escuela Primaria Valentín Gómez Farías
-          </span>
+                <a class="nav-link" href="/tutorial">Instrucciones</a>
+                </li>
+            </ul>
+            <span class="navbar-text">
+                Escuela Primaria Valentín Gómez Farías
+            </span>
         </div>
     </nav>
 
@@ -67,32 +65,37 @@
 
     <section class="mi-tarea section">
         <div class="container" style="width: 500px;">
-            <h2 class="text-center my-5">Tareas</h2>
-            <h3>Aquí encontrarás en qué consiste la tarea y el apartado para subir tus evidencias.</h3>
+            <h2 class="text-center my-5">Nueva tarea</h2>
+            <h3>Sube aquí la nueva tarea que asignarás</h3>
             <form>
-                <h3>Aquí debe ir la visualización del archivo que subió el maestro D:</h3>
                 <div class="form-group">
-                    <div class="card">
-                        <div class="card-body">
-                            Comentarios adicionales de parte del maestro.
-                        </div>
-                    </div>
                     <div class="form-group">
-                        <label for="exampleFormControlFile1">Descarga el pdf</label>
-                    </div>
-                    <div class="class form-group">
-                        <a href="#" class="btn btn-primary" onclick="">Descargar archivo</a>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <label class="input-group-text" for="inputGroupSelect01">Materia</label>
+                                </div>
+                                <select class="custom-select" id="inputGroupSelect01">
+                                <option selected>Elige...</option>
+                                <option value="1">Lengua materna</option>
+                                <option value="2">Desafíos matemáticos</option>
+                                <option value="3">Ciencias naturales</option>
+                                <option value="4">Educación cíviva y ética</option>
+                                <option value="2">Jalisco</option>
+                                <option value="3">Educación física</option>
+                                </select>
+                            </div>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleFormControlFile1">Sube tu tarea</label>
+                    <label for="exampleFormControlFile1">Carga el archivo de la tarea</label>
                     <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Comentarios para el maestro</label>
+                    <label for="exampleFormControlTextarea1">Comentarios para el alumno</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <p>Aquí debe cargar la visualización del archivo.</p>
                 <button type="submit">Enviar</button>
             </form>
         </div>
